Menu nuevo en todas las pages

--- a/Aerolínea/index.html
+++ b/Aerolínea/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="img/icon.png">
+  <link rel="icon" type="image/x-icon" href="img/iconaero.png">
   <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="sweetalert2.min.css">
@@ -26,7 +26,7 @@
       <div>
           <div class="nombre-pagina">
               <div class="usuario">
-                  <img src="Img/logo.jpg" alt="">
+                  <img src="img/iconaero.png" alt="">
                   <span>Aerolínea</span>
               </div>
           </div>
@@ -47,7 +47,7 @@
                   </a>
               </li>
               <li>
-                  <a href="Pages/Reservas.html">
+                  <a href="Pages/reservas.html">
                       <ion-icon name="bookmarks-outline"></ion-icon>
                       <span>Reservas</span>
                   </a>
