--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -1,99 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../img/icon.png">
-    <link href="../bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/estiloSobre.css" rel="stylesheet">
-    <script src="../js/menuPages.js" defer></script>
-    <script src="../js/footerPages.js" defer></script>
-    <title>Sobre Nosotros | Abstrait</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="../img/iconaero.png">
+  <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="sweetalert2.min.css">
+  <link href="../css/indexEstilo.css" rel="stylesheet">
+  <link href="../css/menu.css" rel="stylesheet">
+  <link href="../css/menuInicio.css" rel="stylesheet">
+  <script src="../js/menuIndex.js" defer></script>
+  <script src="../js/footerIndex.js" defer></script>
+  <title>Vuelos Semanales | Aerolínea</title>
 </head>
 <body>
-    <div id="menuContenedor"></div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-<img src="../img/bannerUs.png" class="sobre">
-<br>
-<div class="container">
-    <div class="row">
-
-      <div class="col col1">
-        <br>
-        <br>
-          <img class="perfil2" src="../img/foto1.png" alt="">
-          <br>
-        <p class="nombre1">Jonathan Orellana</p>
-        <p class="profesion">Coordinador</p>
-      </div>
-
-      <div class="col col1">
-        <br>
-        <br>
-          <img class="perfil2" src="../img/foto2.png" alt="">
-          <br>
-        <p class="nombre1">Raúl Ochoa</p>
-        <p class="profesion">Subcoordinador</p>
-      </div>
-
-      <div class="col col1">
-        <br>
-        <br>
-          <img class="perfil2" src="../img/foto3.png" alt="">
-          <br>
-        <p class="nombre1">Diego Pocasangre</p>
-        <p class="profesion">Secretario</p>
-      </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col col1">
-            <br>
-            <br>
-              <img class="perfil2" src="../img/foto4.png" alt="">
-              <br>
-            <p class="nombre1">Olga Méndez</p>
-            <p class="profesion">Tesorera</p>
-          </div>
-  
-          <div class="col col1">
-            <br>
-            <br>
-              <img class="perfil2" src="../img/foto5.png" alt="">
-              <br>
-            <p class="nombre1">Doris Manzano</p>
-            <p class="profesion">Vocal 1</p>
-          </div>
-  
-          <div class="col col1">
-            <br>
-            <br>
-              <img class="perfil2" src="../img/foto6.png" alt="">
-              <br>
-            <p class="nombre1">Rodrigo Torres</p>
-            <p class="profesion">Vocal 2</p>
-          </div>
-  
-      </div>
-
+  <div id="division">
+    <div class="menu">
+      <ion-icon name="menu-outline"></ion-icon>
+      <ion-icon name="close-outline"></ion-icon>
   </div>
 
-<br>
-<br>
-<br>
-<br>
+  <div class="barra-lateral">
+      <div>
+          <div class="nombre-pagina">
+              <div class="usuario">
+                  <img src="../img/iconaero.png" alt="">
+                  <span>Aerolínea</span>
+              </div>
+          </div>
+      </div>
 
-<div id="footerContenedor"></div>
+      <nav class="navegacion">
+          <ul>
+              <li>
+                  <a id="inbox" href="../index.html">
+                      <ion-icon name="home-outline"></ion-icon>
+                      <span>Inicio</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="vuelosemanales.html">
+                      <ion-icon name="restaurant-outline"></ion-icon>
+                      <span>Vuelos Diarios</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="reservas.html">
+                      <ion-icon name="bookmarks-outline"></ion-icon>
+                      <span>Reservas</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="misreservas.html">
+                      <ion-icon name="people-circle-outline"></ion-icon>
+                      <span>Mis reservas</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="sobreNosotros.html">
+                      <ion-icon name="chatbubbles-outline"></ion-icon>
+                      <span>Sobre nosotros</span>
+                  </a>
+              </li>
+          </ul>
+          <ul>
+              <li>
 
-    <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/cargarMenuPages.js"></script>
-    <script src="../js/cargarFooterPages.js"></script>
+              </li>
+          </ul>
+      </nav>
+      
+      <div class="linea"></div>
+      <br>
+      
+  </div>
+
+  <div id="footerContenedor"></div>
+
+  <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/cargarMenuIndex.js"></script>
+  <script src="js/cargarFooterIndex.js"></script>
+  <script src="js/index.js"></script>
 </body>
+
 </html>
