--- a/Aerolínea/pages/misreservas.html
+++ b/Aerolínea/pages/misreservas.html
@@ -11,6 +11,7 @@
   <link href="../css/indexEstilo.css" rel="stylesheet">
   <link href="../css/menu.css" rel="stylesheet">
   <link href="../css/menuInicio.css" rel="stylesheet">
+  <link href="../css/misreservas.css" rel="stylesheet">
   <script src="../js/menuIndex.js" defer></script>
   <script src="../js/footerIndex.js" defer></script>
   <title>Vuelos Semanales | Aerolínea</title>
@@ -77,13 +78,18 @@
       
   </div>
 
-  <div id="footerContenedor"></div>
 
-  <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/cargarMenuIndex.js"></script>
-  <script src="js/cargarFooterIndex.js"></script>
-  <script src="js/index.js"></script>
-</body>
+  <section class="price container">
+    <h2 class="subtitle">Tus reservas </h2>
 
-</html>
+    <div class="price__table">
+        <div class="price__element">
+            <p class="price__name">España, Barcelona</p>
+            <h3 class="price__price">$470$</h3>
+
+            <div class="price__items">
+                <p class="price__features">Aerolinea El Salvador.</p>
+                <p class="price__features">23/05/24</p>
+                <p class="price__features">Soporte t&eacute;cnico.</p>
+                
+            </div>
