--- a/Aerolínea/pages/misreservas.html
+++ b/Aerolínea/pages/misreservas.html
@@ -85,11 +85,26 @@
     <div class="price__table">
         <div class="price__element">
             <p class="price__name">España, Barcelona</p>
-            <h3 class="price__price">$470$</h3>
+            <h3 class="price__price">$470</h3>
 
             <div class="price__items">
                 <p class="price__features">Aerolinea El Salvador.</p>
                 <p class="price__features">23/05/24</p>
+                <p class="price__features">Soporte t&eacute;cnico.</p>
+                
+            </div>
+
+            <a href="pages/downloads.html" class="price__cta">Empieza ahora</a>
+        </div>
+
+
+        <div class="price__element price__element--best">
+            <p class="price__name">Francia, Paris</p>
+            <h3 class="price__price">$340</h3>
+
+            <div class="price__items">
+                <p class="price__features">Aerolinea El Salvador.</p>
+                <p class="price__features">20/09/24</p>
                 <p class="price__features">Soporte t&eacute;cnico.</p>
                 
             </div>
