Img del carousel y cambios en el footer

--- a/Aerolínea/index.html
+++ b/Aerolínea/index.html
@@ -82,16 +82,13 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/carr1.png" class="d-block w-100" alt="...">
+            <img src="img/carouselaero1.webp" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/carr2.png" class="d-block w-100" alt="...">
+            <img src="img/carouselaero2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/carr3.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="imgLogo">
-            <img src="img/logoBruno.png" class="logoBruno">
+            <img src="img/carouselaero3.avif" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -107,31 +104,6 @@
       </div>
 
 
-      <div class="container-fluid cont1">
-        <br>
-        <br>
-        <div class="row">
-
-          <div class="col colRec">
-            <img class="recs" src="img/rec1.png" alt="">
-            <p class="textoTarjeta">100 millones+</p>
-            <p class="textoTsm">De usuarios</p>
-          </div>
-
-          <div class="col colRec">
-            <img class="recs" src="img/rec2.png" alt="">
-            <p class="textoTarjeta">Confiable</p>
-            <p class="textoTsm">La mejor gestión</p>
-          </div>
-
-          <div class="col colRec">
-            <img class="recs" src="img/rec3.png" alt="">
-            <p class="textoTarjeta">Fácil</p>
-            <p class="textoTsm">Interfaz potente e intuitiva</p>
-          </div>
-        </div>
-
-      </div>
 
       <div class="container">
 
@@ -140,7 +112,7 @@
       <br>
       <div class="container">
         <p class="info">
-          <b> Comienza tu negocio con Abstrait</b>
+          <b>Vive nuevas experiencias con nosotros</b>
         </p>
         <p class="info1"> Abstrait es un administrador de galerías de arte que muestra ser profesional, apasionado y
           versátil que
@@ -156,56 +128,12 @@
           a los detalles y la eficiencia en todas las necesidades de la gestión de galerías.</p>
       </div>
       <br>
-      <div id="cosaVerde" class="container text-center justify-content-center align-items-center pt-4 pb-4">
-        <h1 class="info2">La Herramienta que construye tu Negocio</h1>
-        <br>
-        <div id="DemoCarrousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner  ">
-            <div class="carousel-item active">
-              <img src="img/mini1.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini2.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini3.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini4.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini5.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini6.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini7.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini8.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/mini9.jpeg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-
-          <button class="carousel-control-prev" type="button" data-bs-target="#DemoCarrousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#DemoCarrousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        <br>
-        <br>
-      </div>
 
       <div class="container">
         <br>
-        <h1 class="estiloH">Mira lo que dicen nuestros usuarios:</h1>
+        <p class="info">
+          <b>Mira lo que dicen nuestros clientes</b>
+        </p>
         <br>
       </div>
 
@@ -220,7 +148,6 @@
             <br>
             <img class="perfil2" src="img/perfil1.png" alt="">
             <p class="nombre1">Rose Dolphin</p>
-            <p class="profesion">Galerista</p>
           </div>
 
           <div class="col col1">
@@ -231,7 +158,6 @@
             <br>
             <img class="perfil2" src="img/perfil2.png" alt="">
             <p class="nombre1">Natalia Románov</p>
-            <p class="profesion">Ilustradora</p>
           </div>
 
           <div class="col col1">
@@ -242,31 +168,16 @@
             <br>
             <img class="perfil2" src="img/perfil3.png" alt="">
             <p class="nombre1">Sergio Castañeda</p>
-            <p class="profesion">Artista plástico</p>
-          </div>
-
-          <div class="col col1">
-            <br>
-            <p>Abstrait es un programa muy completo, como artista me parecen excelentes sus opciones y todas las
-              funcionalidades qué ofrece el proyecto.</p>
-            <br>
-            <br>
-            <img class="perfil2" src="img/perfil4.png" alt="">
-            <p class="nombre1">Henry Garza</p>
-            <p class="profesion">Artista</p>
           </div>
 
         </div>
       </div>
 
       <br>
-      <div class="container">
-        <img class="bottom" src="img/bannerabajo.png">
-      </div>
   </div>
   </main>
   </div>
-
+  
   <div id="footerContenedor"></div>
 
   <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
