--- a/Aerolínea/pages/misreservas.html
+++ b/Aerolínea/pages/misreservas.html
@@ -108,3 +108,18 @@
                 <p class="price__features">Soporte t&eacute;cnico.</p>
                 
             </div>
+
+            <a href="pages/downloads.html" class="price__cta">Empieza ahora</a>
+        </div>
+
+
+        <div class="price__element">
+            <p class="price__name">Estados unidos</p>
+            <h3 class="price__price">$159.99</h3>
+
+            <div class="price__items">
+                <p class="price__features">Aerolinea El Salvador.</p>
+                <p class="price__features">S12/12/24</p>
+                <p class="price__features">Acceso a todos los servicios.</p>
+                
+            </div>
