--- a/Aerolínea/pages/misreservas.html
+++ b/Aerolínea/pages/misreservas.html
@@ -123,3 +123,7 @@
                 <p class="price__features">Acceso a todos los servicios.</p>
                 
             </div>
+        </div>
+
+            
+</body>
