quienes somos en pagina de sobre nosotros

--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -74,8 +74,22 @@
       
       <div class="linea"></div>
       <br>
-      
   </div>
+
+  <div class="cont7 container-fluid">
+    <div class="imge">
+        <img src=""; class="imagen"> 
+        <img src=""; class="imghover">
+    </div>
+    <div class="cont3">
+        <h2 class="texto11">¿Quienes somos?</h2>
+        <br>
+        <p class="texto22">En , nos enorgullecemos de conectar a personas y 
+            lugares de una manera segura, eficiente y memorable. Con décadas de experiencia en la industria 
+            de la aviación, hemos establecido un estándar de excelencia en el servicio al cliente y la operación de vuelos a nivel mundial.</p>
+        <br>
+    </div>
+</div>
 
   <div id="footerContenedor"></div>
 
