--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -82,7 +82,7 @@
         <img src=""; class="imghover">
     </div>
     <div class="cont3">
-        <h2 class="texto11">¿Quienes somos?</h2>
+        <h2 class="texto11">¿Quiénes somos?</h2>
         <br>
         <p class="texto22">En , nos enorgullecemos de conectar a personas y 
             lugares de una manera segura, eficiente y memorable. Con décadas de experiencia en la industria 
