--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -8,6 +8,7 @@
   <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="sweetalert2.min.css">
+  <link href="../css/sobreNosotros.css" rel="stylesheet"> 
   <link href="../css/indexEstilo.css" rel="stylesheet">
   <link href="../css/menu.css" rel="stylesheet">
   <link href="../css/menuInicio.css" rel="stylesheet">
