cambios en sobre nosotros

--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -79,8 +79,8 @@
 
   <div class="cont7 container-fluid">
     <div class="imge">
-        <img src=""; class="imagen"> 
-        <img src=""; class="imghover">
+        <img src="../img/sobrenosotros1.jpg"; class="imagen"> 
+        <img src="../img/sobrenosotros2.jpg"; class="imghover">
     </div>
     <div class="cont3">
         <h2 class="texto11">¿Quiénes somos?</h2>
