cambios en sobre nosotros el porque elegirnos

--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -109,8 +109,8 @@
                 <br>
             </div>
             <div class="imge">
-                <img src="../img/hover1.png"; class="imagen"> 
-                <img src="../img/hover2.png"; class="imghover">
+                <img src="../img/sobrenosotros3.jpg"; class="imagen"> 
+                <img src="../img/sobrenosotros4.jpg"; class="imghover">
             </div>
         </div>
 
