--- a/Aerolínea/index.html
+++ b/Aerolínea/index.html
@@ -27,7 +27,7 @@
           <div class="nombre-pagina">
               <div class="usuario">
                   <img src="img/iconaero.png" alt="">
-                  <span>Aerolínea</span>
+                  <span>SkyWings</span>
               </div>
           </div>
       </div>
@@ -88,7 +88,7 @@
             <img src="img/carouselaero2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/carouselaero3.avif" class="d-block w-100" alt="...">
+            <img src="img/carousel3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -114,18 +114,9 @@
         <p class="info">
           <b>Vive nuevas experiencias con nosotros</b>
         </p>
-        <p class="info1"> Abstrait es un administrador de galerías de arte que muestra ser profesional, apasionado y
-          versátil que
-          despliega un profundo entendimiento del mundo artístico y una habilidad excepcional
-          para la gestión. Encargado de la coordinación y ejecución de exposiciones, ventas
-          y operaciones diarias de la galería, este programa demuestra una combinación única
-          de creatividad y destrezas organizativas.</p>
+        <p class="info1">Prepárate para vivir la experiencia SkyWings Airlines. Explora nuestro sitio web para conocer nuestras ofertas especiales, planificar tu próximo viaje y sumergirte en el mundo de la aviación con estilo. ¡Eleva tus expectativas y vuela alto con SkyWings Airlines hoy mismo!</p>
 
-        <p class="info11">Su rol implica establecer relaciones con
-          artistas, vendedores y coleccionistas, así como supervisar la administración, la comercialización
-          y la logística de las obras. Con una visión estratégica, el administrador Abstrait se
-          esfuerza por ofrecer la mejor experiencia de administración mientras mantiene una atención meticulosa
-          a los detalles y la eficiencia en todas las necesidades de la gestión de galerías.</p>
+        <p class="info11">¡Descubre la magia de volar con SkyWings Airlines, donde la excelencia y la comodidad se unen para brindarte experiencias de viaje inolvidables! Nuestra aerolínea está dedicada a ofrecer un servicio de calidad que va más allá de las expectativas, elevando cada vuelo a una experiencia única.</p>
       </div>
       <br>
 
@@ -142,8 +133,7 @@
 
           <div class="col col1">
             <br>
-            <p>Esta herramienta ha facilitado y mejorado el funcionamiento en la galería de arte qué administro, en
-              definitiva la recomiendo.</p>
+            <p>Han demostrado ser una elección sólida para mis viajes de negocios. Los horarios son convenientes y el Wi-Fi a bordo es rápido.</p>
             <br>
             <br>
             <img class="perfil2" src="img/perfil1.png" alt="">
@@ -152,8 +142,7 @@
 
           <div class="col col1">
             <br>
-            <p>Me encanta la apariencia qué tiene Abstrait, se ve muy ordenado y bien pensado, está diseñado para ser
-              usado de manera fácil y eficaz.</p>
+            <p>¡Una experiencia inolvidable! Mi vuelo fue emocionante. Las vistas desde las ventanas eran asombrosas.</p>
             <br>
             <br>
             <img class="perfil2" src="img/perfil2.png" alt="">
@@ -162,8 +151,7 @@
 
           <div class="col col1">
             <br>
-            <p>He observado como las galerías qué exhiben y venden mis obras ahora tienen una eficiencia aún mayor
-              usando este programa.</p>
+            <p>Se han convertido en mi elección predilecta. La puntualidad es impecable, los vuelos son suaves y la comida a bordo es deliciosa.</p>
             <br>
             <br>
             <img class="perfil2" src="img/perfil3.png" alt="">
