Iconos en el menu

--- a/Aerolínea/index.html
+++ b/Aerolínea/index.html
@@ -37,7 +37,7 @@
               <li>
                   <a id="inbox" href="Inicio.html">
                     <ion-icon name="home-outline"></ion-icon>
-                      <span>Inicio</span>
+                      <span>Inicio h</span>
                   </a>
               </li>
               <li>
