--- a/Aerolínea/pages/vuelosemanales.html
+++ b/Aerolínea/pages/vuelosemanales.html
@@ -11,6 +11,7 @@
   <link href="../css/indexEstilo.css" rel="stylesheet">
   <link href="../css/menu.css" rel="stylesheet">
   <link href="../css/menuInicio.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/vuelosdiarios.css">
   <script src="../js/menuIndex.js" defer></script>
   <script src="../js/footerIndex.js" defer></script>
   <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
