--- a/Aerolínea/pages/vuelosemanales.html
+++ b/Aerolínea/pages/vuelosemanales.html
@@ -163,7 +163,7 @@
             </div>
             <br>
             <article>
-                <h3>salidas</h3>
+                <h3>Salidas</h3>
                 <br>
                 <span>Busqueda rapida</span>
                 <form class="d-flex" role="search">
